--- a/src/views/topics/show.ejs
+++ b/src/views/topics/show.ejs
@@ -12,9 +12,19 @@
     <main class="container">
       <h1><%= topic.title %></h1>
       <a href="/topics/<%= topic.id %>/edit" class="btn btn-warning">Edit</a>
+      <a href="/topics/<%= topic.id %>/hacks/new" class="btn btn-success">New Hack</a>
       <form style="display:initial" action="/topics/<%= topic.id %>/destroy" method="post">
         <button type="submit" class="btn btn-danger">Delete</button>
       </form>
+      <hr>
+      <h1>Hacks</h1>
+      <ul class="list-group">
+        <% topic.hacks.forEach((hack) => { %>
+          <li class="list-group-item">
+            <a href="/topics/<%= topic.id %>/hacks/<%= hack.id %>"> <%= hack.title %> </a>
+          </li>
+          <% }) %>
+      </ul>
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
