--- a/src/views/hacks/edit.ejs
+++ b/src/views/hacks/edit.ejs
@@ -10,6 +10,9 @@
     <% include ../static/partials/navbar.ejs %>
 
     <main class="container">
+
+      <% include ../static/partials/messages.ejs %>
+      
       <h1>Edit Hack</h1>
       <form action="/topics/<%= hack.topicId %>/hacks/<%= hack.id %>/update" method="post">
         <div class="form-group">
