--- a/src/views/hacks/new.ejs
+++ b/src/views/hacks/new.ejs
@@ -10,15 +10,20 @@
     <% include ../static/partials/navbar.ejs %>
 
     <main class="container">
+
+      <% include ../static/partials/messages.ejs %>
+
       <h1>New Hack</h1>
       <form action="/topics/<%= topicId %>/hacks/create" method="post">
         <div class="form-group">
           <label for="title">Hack title</label>
           <input type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter title">
+          <small class="text-muted" id="titleHelp">Title must be 2 or more characters in length.</small>
         </div>
         <div class="form-group">
           <label for="body">Hack body</label>
           <textarea rows="4" class="form-control" name="body" placeholder="Enter hack body"></textarea>
+          <small class="text-muted" id="bodyHelp">Body must be 5 or more characters in length.</small>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
