--- a/src/views/topics/index.ejs
+++ b/src/views/topics/index.ejs
@@ -10,6 +10,8 @@
 
       <h1>Topics</h1>
 
+      <a href="/topics/new" class="btn btn-primary">New Topic</a>
+
       <div class="card-deck">
         <% topics.forEach((topic) => { %>
           <div class="card">
