--- a/src/views/topics/new.ejs
+++ b/src/views/topics/new.ejs
@@ -11,6 +11,8 @@
 
     <main class="container">
 
+      <% include ../static/partials/messages.ejs %>
+
       <h1>New Topic</h1>
       <form action="/topics/create" method="post">
         <div class="form-group">
@@ -22,6 +24,6 @@
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
-    
+
   </body>
 </html>
