--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -12,7 +12,7 @@
         <a class="nav-item nav-link" href="/users/sign_out">Sign out</a>
       <% } else { %>
         <a class="nav-item nav-link" href="/users/sign_up">Sign up</a>
-        <a class="nav-item nav-link" href="/users/sign_in>Sign in</a>"
+        <a class="nav-item nav-link" href="/users/sign_in">Sign in</a>
       <% } %>
 
     </div>
