--- a/src/views/hacks/show.ejs
+++ b/src/views/hacks/show.ejs
@@ -20,6 +20,21 @@
       <% } %>
 
       <p><%= hack.body %></p>
+
+      <section id="comment-form">
+        <% if (currentUser) { %>
+          <% include ../comments/new.ejs %>
+        <% } %>
+      </section>
+
+      <section id="comment-list">
+        <% if (hack.comments) { %>
+          <% hack.comments.forEach((comment) => { %>
+            <%- include("../comments/show.ejs", {comment}) %>
+          <% }) %>
+        <% } %>
+      </section>
+
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
