--- a/src/views/topics/new.ejs
+++ b/src/views/topics/new.ejs
@@ -19,6 +19,10 @@
           <label for="title">Topic title</label>
           <input type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter title">
         </div>
+        <div class="form-group">
+          <label for="image">Topic image</label>
+          <input type="text" class="form-control" name="image" aria-describedby="imageHelp" placeholder="Enter image">
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </main>
