--- a/src/assets/css/application.css
+++ b/src/assets/css/application.css
@@ -1,3 +1,24 @@
 body {
   padding-top: 54px;
 }
+
+@media (min-width: 34em) {
+  .card-columns {
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+  }
+}
+
+#topics-title {
+  color: #5D5C61;
+}
+
+.btn-primary {
+  background-color: #7395AE;
+  border-color: #557A95;
+}
+
+.card-title {
+  color: #557A95;
+}
