--- a/src/views/topics/edit.ejs
+++ b/src/views/topics/edit.ejs
@@ -12,12 +12,16 @@
     <main class="container">
 
       <% include ../static/partials/messages.ejs %>
-      
+
       <h1>Edit Topic</h1>
       <form action="/topics/<%= topic.id %>/update" method="post">
         <div class="form-group">
           <label for="title">Topic title</label>
           <input value="<%= topic.title %>" type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter title">
+        </div>
+        <div class="form-group">
+          <label for="image">Topic image</label>
+          <input value="<%= topic.image %>" type="text" class="form-control" name="image" aria-describedby="imageHelp" placeholder="Enter image">
         </div>
         <button type="submit" class="btn btn-primary">Update</button>
       </form>
