--- a/src/views/topics/index.ejs
+++ b/src/views/topics/index.ejs
@@ -11,13 +11,9 @@
       <% include ../static/partials/navbar.ejs %>
 
       <div class="row" id="topics-title">
-        <div class="col-10">
-          <h1>Topics</h1>
-        </div>
-
-        <div class="col-2 align-self-center">
+        <div class="col align-self-center">
           <% if (currentUser && currentUser.isAdmin()) { %>
-            <a href="/topics/new" class="btn btn-primary">New Topic</a>
+            <a href="/topics/new" class="btn btn-primary float-right">New Topic</a>
           <% } %>
         </div>
       </div>
@@ -28,7 +24,7 @@
               <a href="/topics/<%= topic.id %>">
                 <img src="https://source.unsplash.com/<%= topic.image %>" class="card-img-top" alt= <%= topic.title %> >
                 <div class="Card-body">
-                  <h5 class="card-title"> <%= topic.title %> </h5>
+                  <h5 class="card-title text-right"> <%= topic.title %> </h5>
                 </div>
               </a>
             </div>
